backend/media/Outputiles/9cdcc1a0572c44bebf299ace2e59d632_compile_output.txt
9cdcc1a0572c44bebf299ace2e59d632.cpp: In function ‘int main()’:
9cdcc1a0572c44bebf299ace2e59d632.cpp:10:5: error: ‘vecotr’ was not declared in this scope
   10 |     vecotr<int> v(n);
      |     ^~~~~~
9cdcc1a0572c44bebf299ace2e59d632.cpp:10:12: error: expected primary-expression before ‘int’
   10 |     vecotr<int> v(n);
      |            ^~~
9cdcc1a0572c44bebf299ace2e59d632.cpp:11:31: error: ‘v’ was not declared in this scope
   11 |     for(int i=0;i<n;i++) cin>>v[i];
      |                               ^
9cdcc1a0572c44bebf299ace2e59d632.cpp:12:22: error: ‘v’ was not declared in this scope
   12 |     cout<<accumulate(v.begin(),v.end(),0)<<'\n';
      |                      ^
